--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-DB_CONNECTION = mongodb+srv://roserocket:test1234@serverlessinstance0.dsoai.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DB_CONNECTION = mongodb+srv://<username>:<password>@serverlessinstance0.dsoai.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
